--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "Postgress": "Host=dpg-cs08500gph6c73a43bjg-a.oregon-postgres.render.com;Database=bdtransaccion;Username=bdtransaccion_user;Password=ObHDGvg7T2VuO7EqudLPaRVSJoAkceMY;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
